[package]
name = "chippers"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sdl2 = "0.35.2"
tokio = {version = "1.23.1", features = ["time", "macros", "rt", "rt-multi-thread"]}
futures = "0.3.25"
bitvec = "1"
